updating README with wiki details

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-India RubyConf - Feb 2010
+India RubyConf - 2010
+
+Please see the <a href="http://wiki.github.com/RobZolkos/IndiaRailsConf">Wiki</a>
 
 Got some ideas?
