updating README with wiki details - fixed HTML

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 India RubyConf - 2010
 
-Please see the <a href="http://wiki.github.com/RobZolkos/IndiaRailsConf">Wiki</a>
+Please see the Wiki - http://wiki.github.com/RobZolkos/IndiaRailsConf
 
 Got some ideas?
